--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="./tema_undangan/tema_5/index.html">Tema 5</a>
     <a href="./tema_undangan/tema_6/index.html">Tema 6</a>
     <a href="./tema_undangan/tema_7/index.html">Tema 7</a>
+    <a href="./tema_undangan/tema_8/index.html">Tema 8</a>
 </body>
 </html>
