--- a/tema_undangan/tema_1/index.html
+++ b/tema_undangan/tema_1/index.html
@@ -667,13 +667,32 @@
             <v-col cols="10">
               <div class="d-flex ml-15">
                 <div class="mr-auto pl-16 ml-16">{{ totalUcapan }} Reply</div>
+                <div class="pr-16">
+                  <v-btn text @click="asc=!asc">Newest
+                    <v-icon v-if="asc">mdi-arrow-up</v-icon>
+                    <v-icon v-else>mdi-arrow-down</v-icon>
+                  </v-btn>
+                </div>
+              </div>
+            </v-col>
+          </v-row>
+          <v-row v-else class="mt-5">
+            <v-col cols="12">
+              <div class="d-flex">
+                <div class="mr-auto">{{ totalUcapan }} Reply</div>
+                <div class="">
+                  <v-btn text @click="asc=!asc">Newest
+                    <v-icon v-if="asc">mdi-arrow-up</v-icon>
+                    <v-icon v-else>mdi-arrow-down</v-icon>
+                  </v-btn>
+                </div>
               </div>
             </v-col>
           </v-row>
             <v-row class="fill-height" justify="start">
             <v-col>
             <div class="overflowAuto">
-              <div v-for="(uc, id) in dataApi.comments" :key="id" class="my-5" :class="comments">
+              <div v-for="(uc, id) in sorted" :key="id" class="my-5" :class="comments">
                 <p class="font-weight-bold">{{ uc.owner }}</p>
                 <p class="font-weight-light">{{ uc.content }}</p>
               </div>
@@ -733,6 +752,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js" integrity="sha512-xIPqqrfvUAc/Cspuj7Bq0UtHNo/5qkdyngx6Vwt+tmbvTLDszzXM0G6c91LXmGrRx8KEPulT+AfOOez+TeVylg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
   <script src="./js/vue.js"></script>
   <script src="./js/jquery.js"></script>
 </body>
