--- a/tema_undangan/tema_6/index.html
+++ b/tema_undangan/tema_6/index.html
@@ -725,7 +725,14 @@
                         <v-card width="700" color="deep-orange lighten-3" class="mt-10">
                             <v-card-text>
                                 <v-text-field v-model="form.nama" label="Nama" solo></v-text-field>
-                                <v-select v-model="form.kehadiran" solo label="Kedatangan" :items="kehadiran"></v-select>
+                                <v-row>
+                                    <v-col>
+                                        <v-text-field v-model="form.write_as" label="Ditulis Oleh" solo></v-text-field>
+                                    </v-col>
+                                    <v-col>
+                                        <v-text-field v-model="form.sosmed" label="Nama Sosmed" solo></v-text-field>
+                                    </v-col>
+                                </v-row>
                                 <v-textarea v-model="form.ucapan" rows="3" label="Pesan/Doa" solo></v-textarea>
                             </v-card-text>
                             <v-card-title class="justify-center">
@@ -736,7 +743,8 @@
                             <v-card-title>
                                 <div class="overflowAuto">
                                 <div v-for="(i, idx) in dataApi.comments" :key="idx">
-                                <p class="title mx-4">{{ i.owner }}</p>
+                                <p class="title mx-4">{{ i.owner }} <span class="pl-2 text-caption text--disabled">{{ i.date_only }}</span></p>
+                                <p class="text-caption mx-4 mt-n5 text--disabled">Ditulis oleh {{ i.write_as }}, ({{ i.sosmed }})</p>
                                 <p class="text-caption mx-4">{{ i.content }}</p>
                                 <v-divider></v-divider>
                                 </div>
@@ -748,7 +756,14 @@
                         <v-card color="deep-orange lighten-3" class="mt-10">
                             <v-card-title>
                                 <v-text-field v-model="form.nama" label="Nama" solo></v-text-field>
-                                <v-select v-model="form.kehadiran" solo label="Kedatangan" :items="kehadiran"></v-select>
+                                <v-row>
+                                    <v-col>
+                                        <v-text-field v-model="form.write_as" label="Ditulis Oleh" solo></v-text-field>
+                                    </v-col>
+                                    <v-col>
+                                        <v-text-field v-model="form.sosmed" label="Nama Sosmed" solo></v-text-field>
+                                    </v-col>
+                                </v-row>
                                 <v-textarea v-model="form.ucapan" rows="3" label="Pesan/Doa" solo></v-textarea>
                             </v-card-title>
                             <v-card-title class="justify-center">
@@ -759,9 +774,10 @@
                             <v-card-title>
                                 <div class="overflowAuto">
                                 <div v-for="(i, idx) in dataApi.comments" :key="idx">
-                                <p class="title mx-4">{{ i.owner }}</p>
-                                <p class="text-caption mx-4">{{ i.content }}</p>
-                                <v-divider></v-divider>
+                                    <p class="title mx-4">{{ i.owner }} <span class="pl-2 text-caption text--disabled">{{ i.date_only }}</span></p>
+                                    <p class="text-caption mx-4 mt-n5 text--disabled">Ditulis oleh {{ i.write_as }}, ({{ i.sosmed }})</p>
+                                    <p class="text-caption mx-4">{{ i.content }}</p>
+                                    <v-divider></v-divider>
                                 </div>
                                 </div>
                             </v-card-title>
