--- a/tema_undangan/tema_1/index.html
+++ b/tema_undangan/tema_1/index.html
@@ -371,7 +371,7 @@
                     </v-card-title>
                     <v-card-text class="text-center white--text px-16 pt-10">
                       <p>Bagi Keluarga dan Sahabat yang ingin mengirimkan hadiah, silahkan mengirimkannya melalui :</p>
-                      <v-btn rounded color="brown darken-3" :class="buttonGift">
+                      <v-btn rounded color="brown darken-3">
                         <v-icon left>mdi-card-account-details</v-icon>Transfer
                       </v-btn>
                       <v-btn rounded color="brown darken-3">
