--- a/tema_undangan/tema_2/index.html
+++ b/tema_undangan/tema_2/index.html
@@ -99,7 +99,7 @@
                 <p class="white--text text-center subtitle mx-12 font-weight-light">Alamat : Klaling Krajan Rt 05/ Rw 01
                   No. 66, Jekulo, Kudus</p>
                 <div class="d-flex justify-center">
-                  <v-btn dark color="grey darken-1" class="mt-10" elevation="" fab>
+                  <v-btn dark color="grey darken-1" class="my-10" elevation="" fab>
                     <v-icon>mdi-instagram</v-icon>
                   </v-btn>
                 </div>
