--- a/tema_undangan/tema_8/index.html
+++ b/tema_undangan/tema_8/index.html
@@ -338,12 +338,16 @@
                                 <div class="text-start" v-for="(story, i) in dataApi.stories" :key="i">
                                     <p class="text-h5">{{ story.judul }}</p>
                                     <p class="text-caption green--text">{{ story.tanggal }}</p>
+                                    <v-img max-width="400" max-height="400" :src="story.photo">
+                                    </v-img>
                                     <p>{{ story.cerita }}</p>
                                 </div>
                             </div>
                             <div class="text-start" v-for="(story, i) in dataApi.stories" :key="i" v-else>
                                 <p class="text-h5">{{ story.judul }}</p>
                                 <p class="text-caption green--text">{{ story.tanggal }}</p>
+                                <v-img max-width="400" max-height="400" :src="story.photo">
+                                </v-img>
                                 <p>{{ story.cerita }}</p>
                             </div>
                             <h1 class="fontPage1 my-16" style="font-size: 50px;">Go To Our Wedding</h1>
@@ -414,10 +418,12 @@
                                         <v-text-field v-model="form.nama" label="Nama" solo></v-text-field>
                                         <v-row>
                                             <v-col>
-                                                <v-text-field v-model="form.write_as" label="Ditulis Oleh" solo></v-text-field>
+                                                <v-text-field v-model="form.write_as" label="Ditulis Oleh" solo>
+                                                </v-text-field>
                                             </v-col>
                                             <v-col>
-                                                <v-text-field v-model="form.sosmed" label="Nama Sosmed" solo></v-text-field>
+                                                <v-text-field v-model="form.sosmed" label="Nama Sosmed" solo>
+                                                </v-text-field>
                                             </v-col>
                                         </v-row>
                                         <v-textarea rows="3" v-model="form.ucapan" label="Pesan/Doa" solo></v-textarea>
@@ -432,9 +438,12 @@
                                     <v-card-title class="text-start">
                                         <div class="overflowAuto">
                                             <div v-for="(i, idx) in dataApi.comments" :key="idx">
-                                                <p class="title mx-4">{{ i.owner }} <span class="pl-2 text-caption text--disabled">{{ i.date_only }}</span></p>
-                                    <p class="text-caption mx-4 mt-n5 text--disabled">Ditulis oleh {{ i.write_as }}, ({{ i.sosmed }})</p>
-                                    <p class="text-caption mx-4">{{ i.content }}</p>
+                                                <p class="title mx-4">{{ i.owner }} <span
+                                                        class="pl-2 text-caption text--disabled">{{ i.date_only }}</span>
+                                                </p>
+                                                <p class="text-caption mx-4 mt-n5 text--disabled">Ditulis oleh
+                                                    {{ i.write_as }}, ({{ i.sosmed }})</p>
+                                                <p class="text-caption mx-4">{{ i.content }}</p>
                                                 <v-divider></v-divider>
                                             </div>
                                         </div>
@@ -449,10 +458,12 @@
                                         <v-text-field v-model="form.nama" label="Nama" solo></v-text-field>
                                         <v-row>
                                             <v-col>
-                                                <v-text-field v-model="form.write_as" label="Ditulis Oleh" solo></v-text-field>
+                                                <v-text-field v-model="form.write_as" label="Ditulis Oleh" solo>
+                                                </v-text-field>
                                             </v-col>
                                             <v-col>
-                                                <v-text-field v-model="form.sosmed" label="Nama Sosmed" solo></v-text-field>
+                                                <v-text-field v-model="form.sosmed" label="Nama Sosmed" solo>
+                                                </v-text-field>
                                             </v-col>
                                         </v-row>
                                         <v-textarea rows="3" v-model="form.ucapan" label="Pesan/Doa" solo></v-textarea>
@@ -465,9 +476,12 @@
                                     <v-card-title class="text-start">
                                         <div class="overflowAuto">
                                             <div v-for="(i, idx) in dataApi.comments" :key="idx">
-                                                <p class="title mx-4">{{ i.owner }} <span class="pl-2 text-caption text--disabled">{{ i.date_only }}</span></p>
-                                    <p class="text-caption mx-4 mt-n5 text--disabled">Ditulis oleh {{ i.write_as }}, ({{ i.sosmed }})</p>
-                                    <p class="text-caption mx-4">{{ i.content }}</p>
+                                                <p class="title mx-4">{{ i.owner }} <span
+                                                        class="pl-2 text-caption text--disabled">{{ i.date_only }}</span>
+                                                </p>
+                                                <p class="text-caption mx-4 mt-n5 text--disabled">Ditulis oleh
+                                                    {{ i.write_as }}, ({{ i.sosmed }})</p>
+                                                <p class="text-caption mx-4">{{ i.content }}</p>
                                                 <v-divider></v-divider>
                                             </div>
                                         </div>
